server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badge-hub
  namespace: badge-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: badge-hub
  template:
    metadata:
      labels:
        app: badge-hub
    spec:
      containers:
        - name: badge-hub
          image: oci.sapslaj.xyz/badge-hub
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthz/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 8080
