server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: badge-hub
  namespace: badge-hub
spec:
  type: ClusterIP
  selector:
    app: badge-hub
  ports:
    - port: 80
      targetPort: 8080
