server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badge-hub
  namespace: badge-hub
spec:
  ingressClassName: traefik
  rules:
    - host: badge.sapslaj.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: badge-hub
                port:
                  number: 80
